--- a/src-frontend/angular.json
+++ b/src-frontend/angular.json
@@ -27,7 +27,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["src/assets/header-script.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
