--- a/src-frontend/package.json
+++ b/src-frontend/package.json
@@ -10,13 +10,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/cdk": "^17.3.6",
+    "@angular/animations": "^17.3.8",
+    "@angular/cdk": "^17.3.8",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
-    "@angular/material": "^17.3.6",
+    "@angular/material": "^17.3.8",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.0",
@@ -26,6 +26,7 @@
     "@nebular/theme": "^13.0.0",
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
