--- a/src-frontend/package.json
+++ b/src-frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^17.0.0",
     "@nebular/eva-icons": "^13.0.0",
     "@nebular/theme": "^13.0.0",
+    "bcryptjs": "^2.4.3",
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
