--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules
 src-api/.idea/
 src-api/.vscode/
 src-api/.metadata/
+src-frontend/dist/
 src-frontend/tmp/
 src-frontend/out-tsc/
 src-frontend/bazel-out/
